[UPD] fixed input field style issue for safari [NEW] introducing "init" function when starting talo clean / for the first time [UPD] minor CSS change to fix too small font settings

--- a/css/basic.css
+++ b/css/basic.css
@@ -65,6 +65,7 @@ input[type="search"].queryInput {
 	font-size: 18px;
 	padding: 2px 10px;
 	margin: 10px 0 0 0;
+	-webkit-appearance: none;
 }
 input[type="search"]:focus.queryInput {
 	background-color: #fff;
