--- a/css/settings.css
+++ b/css/settings.css
@@ -1,4 +1,5 @@
 /* settings.css */
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
 
 /* Bof: some global stuff */
 aside {
@@ -391,7 +392,7 @@ a:hover.closeImEx {
 aside .btn {
 	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 16px;
-	font-weight: 100;
+	font-weight: 300;
 	font-style: normal;
 	text-decoration: none;
 	padding: 2px 10px 2px 30px;
