--- a/themes/clouds/style.css
+++ b/themes/clouds/style.css
@@ -3,7 +3,7 @@
 body {
 	background: #333 url('Clouds.jpg') no-repeat center center;
 	color: #fff;
-	font-weight: 100;
+	font-weight: 300;
 	background-size: 100% 100%;
 	font-family: "Raleway";
 	font-size: 24px;
